Try ti fix scrollbar issue

--- a/UI/src/app/globals.css
+++ b/UI/src/app/globals.css
@@ -164,3 +164,8 @@ body {
 .e-headertext{
   font-size: 1.3em;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
